<resources>
    <string name="app_name">Quotes App</string>
    <string name="validation_username_email">Please enter username or Email address</string>
    <string name="validation_password">Please enter a password</string>
    <string name="quotes">Quotes</string>
    <string name="validation_username">Please enter a username</string>
    <string name="validation_email">Please enter an Email address</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="details">Details</string>
    <string name="create_an_account">Create an Account</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="password">Password</string>
    <string name="username_or_email_address">Username or Email Address</string>
    <string name="search_here">Search Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="successfully_created_account">Successfully created an account</string>
    <string name="successfully_login">Successfully logged in</string>
</resources>